@@ -2749,18 +2749,23 @@ then
   AC_MSG_RESULT()
   failed=0
   passed=0
-  found_libuser32=0
-  found_libgdi32=0
+  #found_libuser32=0
+  #found_libgdi32=0
   AC_CHECK_HEADER([windows.h],[passed=`expr $passed + 1`],[failed=`expr $failed + 1`])
   AC_CHECK_HEADER([winuser.h],[passed=`expr $passed + 1`],[failed=`expr $failed + 1`],[#include <windows.h>])
   AC_CHECK_HEADER([wingdi.h],[passed=`expr $passed + 1`],[failed=`expr $failed + 1`],[#include <windows.h>])
-  AC_CHECK_LIB([user32],[OpenClipboard],[found_libuser32=`expr $found_libuser32 + 1`],[],[])
-  AC_CHECK_LIB([gdi32],[CreateDIBSection],[found_libgdi32=`expr $found_libgdi32 + 1`],[],[])
-  if test $found_libuser32 -gt 0 -a  $found_libgdi32 -gt 0
+  # For some reason MSYS2 and Cygwin i686 build fails library tests.
+  #AC_CHECK_LIB([user32],[OpenClipboard],[found_libuser32=`expr $found_libuser32 + 1`],[],[])
+  #AC_CHECK_LIB([gdi32],[CreateDIBSection],[found_libgdi32=`expr $found_libgdi32 + 1`],[],[])
+  #if test $found_libuser32 -gt 0 -a  $found_libgdi32 -gt 0
+  #then
+  #  passed=`expr $passed + 1`
+  #else
+  #  failed=`expr $failed + 1`
+  #fi
+  if test "$cygwin_build" = yes -o "$native_win32_build" = yes
   then
-    passed=`expr $passed + 1`
-  else
-    failed=`expr $failed + 1`
+        passed=`expr $passed + 1`
   fi
   AC_MSG_CHECKING([if Windows GDI32 support is complete])
   if test $passed -gt 0
